--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,14 +1,14 @@
 .Header {
-    background-color: white;
-    height: 150px;
-    padding: 20px;
+    background-color: gray;
+    height: 200px;
+    padding: 120px;
     color: black;
-    text-align: center;
+    text-align: left;
   }
   
   .Logo img {
- 
-    height: 80px;
+    text-align: center;
+    height: 120px;
   }
   
   .App-title {
@@ -27,14 +27,26 @@
   }
   
   .Menu li{
-    display: inline-block;
     padding-right: 10px;
+    float: left;
   }
   .Menu li a{
-    color:black;
+    text-decoration: none;
+    display: block;
+    color:gray;
+    text-align: left;
+    padding: 16px;
     text-decoration: none;
   
   }
   .Menu li a:hover {
     color: red;
+    background-color: #111111;
+  }
+  .Menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
   }
